Pushing Take Home Challenge for day 8

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Take Home Challenge Day 7</title>
+    <title>Take Home Challenge Day 8</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <h1>TAKE HOME CHALLENGE 7</h1>
+    <h1>TAKE HOME CHALLENGE 8</h1>
+    <div class="main-content-row">
+        <div class="content-column">
+            <div class="char-img"><img src="https://64.media.tumblr.com/bd9b17a89868fb2c14d78b42ffdde279/tumblr_p9iozbhNNX1u84z28o5_100.jpg" alt="deadpool"></div>
+            <div class="character-name">Deadpool</div>
+            <div class="description">Ever-quipping mercenary Wade Wilson’s 
+                healing factor—and big mouth—make him one of the 
+                most relentlessly wisecracking heroes in the universe.</div>
+        </div>
+        <div class="content-column">
+            <div class="char-img"><img src="https://64.media.tumblr.com/bd9b17a89868fb2c14d78b42ffdde279/tumblr_p9iozbhNNX1u84z28o5_100.jpg" alt="deadpool"></div>
+            <div class="character-name">Deadpool</div>
+            <div class="description">Ever-quipping mercenary Wade Wilson’s 
+                healing factor—and big mouth—make him one of the 
+                most relentlessly wisecracking heroes in the universe.</div>
+        </div>
+        <div class="content-column">
+            <div class="char-img"><img src="https://64.media.tumblr.com/bd9b17a89868fb2c14d78b42ffdde279/tumblr_p9iozbhNNX1u84z28o5_100.jpg" alt="deadpool"></div>
+            <div class="character-name">Deadpool</div>
+            <div class="description">Ever-quipping mercenary Wade Wilson’s 
+                healing factor—and big mouth—make him one of the 
+                most relentlessly wisecracking heroes in the universe.</div>
+        </div>
+    </div>
 </body>
 </html>
